--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URL = "https://wedesignclothing.netlify.app/"
+REACT_APP_SERVER_URL = "https://long-earrings-cod.cyclic.app/api/server"
